log/build_2025-04-20_16-59-42/point_demo/stderr.log
  File "/home/nathan/hector_point_ws/install/point_demo/lib/python3.10/site-packages/point_demo/rrt_star.py", line 106
    Sample a random point with goal biasing
           ^
SyntaxError: invalid syntax

